namespaces.yml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
---
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager
  labels:
    istio-injection: enabled
