mlflow-httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mlflow
  namespace: mlflow
spec:
  parentRefs:
  - name: gateway-mlflow
    namespace: istio-system
  rules:
  - matches:
    - path:
        type: Exact
        value: /
    backendRefs:
    - name: mlflow
      port: 5000
