prometheus-httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: prometheus
spec:
  parentRefs:
  - name: gateway-public
    namespace: istio-system
  hostnames:
  - "prometheus.brettoj.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: prometheus-server
      port: 80
